start adding docs, link to github page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Coming Soon!
+<h1>ATV By Example</h1>
+
+<h2>
+Actions
+</h2>
+
+<p>
+The simplest ATV controller allows you to attach an action to a DOM element as follows:
+</p>
+
